--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ def retrofitVersion = '2.9.0'
 def glideVersion = '4.10.0'
 def roomVersion = '2.2.5'
 def supportVersion = '28.0.0'
+def rxJavaVersion = '2.1.1'
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -47,6 +48,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
     // GLIDE
     implementation "com.github.bumptech.glide:glide:$glideVersion"
@@ -57,8 +59,18 @@ dependencies {
     // ROOM
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
+
+    // RXJAVA
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
+
+    // COROUTINES
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
 
 
     testImplementation 'junit:junit:4.12'
